@@ -13,54 +13,26 @@
 function load_adodb() 
 {
   $gCms = cmsms();
-  global $ADODB_vers;
   $config = $gCms->GetConfig();
 
 	// @TODO: Remove dependence on PEAR for error handling	
-	if ($config['debug'] == true)
-	{
-		#@include_once(cms_join_path(dirname(__FILE__), $config['use_adodb_lite'] == true ? 'adodb_lite' : 'adodb', 'adodb-errorpear.inc.php'));
-	}
-	
 	if( !defined('ADODB_OUTP') )
 	  {
 	    define('ADODB_OUTP', 'debug_sql');
 	  }
 	//define('ADODB_ERROR_HANDLER', 'adodb_error');
 	
-	$loaded_adodb = false;
-	
-	if ($config['use_adodb_lite'] == false || (isset($USE_OLD_ADODB) && $USE_OLD_ADODB == 1))
-	{
-	# CMSMS is configured to use full ADOdb
-		$full_adodb = cms_join_path(dirname(__FILE__),'adodb','adodb.inc.php');
-		if (! file_exists($full_adodb))
-		{
-			# Full ADOdb cannot be found, show a debug error message
-			$gCms->errors[] = 'CMS Made Simple is configured to use the full ADOdb Database Abstraction library, but it\'s not in the lib' .DIRECTORY_SEPARATOR. 'adodb directory. Switched back to ADOdb Lite.';
-		}
-		else
-		{
-			# Load (full) ADOdb
-			require($full_adodb);
-			$loaded_adodb = true;
-		}
-	}
-	if (!$loaded_adodb)
-	{
-		$adodb_light = cms_join_path(dirname(__FILE__),'adodb_lite','adodb.inc.php');
-		# The ADOdb library is not yet included, try ADOdb Lite
-		if (file_exists($adodb_light))
-		{
-			# Load ADOdb Lite
-			require_once($adodb_light);
-		}
-		else
-		{
-			# ADOdb cannot be found, show a message and stop the script execution
-			die('The ADOdb Lite database abstraction library cannot be found, CMS Made Simple cannot load.');
-		}
-	}
+	$adodb_light = cms_join_path(dirname(__FILE__),'adodb_lite','adodb.inc.php');
+	if (file_exists($adodb_light))
+	  {
+	    // Load ADOdb Lite
+	    require_once($adodb_light);
+	  }
+	else
+	  {
+	    // ADOdb cannot be found, show a message and stop the script execution
+	    die('The ADOdb Lite database abstraction library cannot be found, CMS Made Simple cannot load.');
+	  }
 	
 	if( !defined('CMS_ADODB_DT') ) define('CMS_ADODB_DT', $config['use_adodb_lite'] ? 'DT' : 'T');
 }
